--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.6.3",
+    "bcrypt-nodejs": "0.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "loglevel": "^1.7.1",
     "mongoose": "^5.11.5",
     "node-fetch": "^2.6.1",
-    "rimraf": "^3.0.0"
+    "rimraf": "^3.0.0",
+    "swagger-ui-express": "^4.1.6"
   }
 }
